--- a/FabuzaExampleSwift/Base.lproj/Main.storyboard
+++ b/FabuzaExampleSwift/Base.lproj/Main.storyboard
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FabuzaExampleSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FabuzaExample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="DZm-7y-E4F">
-                                <rect key="frame" x="100" y="20" width="121" height="29"/>
+                                <rect key="frame" x="127" y="20" width="121" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="121" id="SZe-hH-cEp"/>
                                     <constraint firstAttribute="height" constant="28" id="gjs-SD-03s"/>
@@ -29,16 +33,25 @@
                                 </segments>
                             </segmentedControl>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="wuS-rP-A3C">
-                                <rect key="frame" x="18" y="72" width="284" height="31"/>
+                                <rect key="frame" x="18" y="72" width="339" height="31"/>
                             </slider>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NWZ-mn-Lkd">
                                 <rect key="frame" x="20" y="129" width="51" height="31"/>
                             </switch>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="RCp-Iz-Uz3">
-                                <rect key="frame" x="150" y="274" width="20" height="20"/>
+                                <rect key="frame" x="177.5" y="323.5" width="20" height="20"/>
                             </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift example" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5F3-3o-hRc">
+                                <rect key="frame" x="16" y="213" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="wSq-dl-5WJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="DZm-7y-E4F" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="5bC-0T-Uaz"/>
                             <constraint firstAttribute="trailing" secondItem="wuS-rP-A3C" secondAttribute="trailing" constant="20" id="63O-gC-x34"/>
@@ -48,13 +61,21 @@
                             <constraint firstItem="RCp-Iz-Uz3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="d6h-SE-cih"/>
                             <constraint firstItem="DZm-7y-E4F" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gEL-at-jNb"/>
                             <constraint firstItem="NWZ-mn-Lkd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="niB-5H-JYN"/>
+                            <constraint firstItem="5F3-3o-hRc" firstAttribute="top" secondItem="NWZ-mn-Lkd" secondAttribute="bottom" constant="53" id="qN0-v9-N2j"/>
+                            <constraint firstAttribute="trailing" secondItem="5F3-3o-hRc" secondAttribute="trailing" constant="16" id="qyc-N9-kGc"/>
+                            <constraint firstItem="5F3-3o-hRc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="u5c-Lx-p6H"/>
                             <constraint firstItem="wuS-rP-A3C" firstAttribute="top" secondItem="DZm-7y-E4F" secondAttribute="bottom" constant="24" id="vg2-jM-k3k"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130" y="297"/>
+            <point key="canvasLocation" x="129.5" y="296.5"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+    </simulatedMetricsContainer>
 </document>
