--- a/FabuzaExample/Base.lproj/Main.storyboard
+++ b/FabuzaExample/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,23 +22,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1u6-pQ-Tw8">
-                                <rect key="frame" x="164" y="28" width="46" height="30"/>
+                                <rect key="frame" x="164.5" y="28" width="46" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="46" id="JwW-LO-gYn"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="JwW-LO-gYn"/>
                                     <constraint firstAttribute="height" constant="30" id="wjK-5g-dVI"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3vX-kA-gEK">
-                                <rect key="frame" x="127" y="66" width="121" height="29"/>
+                                <rect key="frame" x="66.5" y="66" width="242" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="ocv-jn-cho"/>
-                                    <constraint firstAttribute="width" constant="121" id="w7r-DB-ZSb"/>
+                                    <constraint firstAttribute="width" constant="242" id="w7r-DB-ZSb"/>
                                 </constraints>
                                 <segments>
-                                    <segment title="First"/>
-                                    <segment title="Second"/>
+                                    <segment title="Yellow"/>
+                                    <segment title="Orange"/>
+                                    <segment title="Blue"/>
                                 </segments>
+                                <connections>
+                                    <action selector="backgroundSelectorClicked:" destination="BYZ-38-t0r" eventType="valueChanged" id="a32-gD-9de"/>
+                                </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Objective-C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mr5-Er-VdV">
                                 <rect key="frame" x="16" y="182" width="343" height="21"/>
@@ -51,31 +55,44 @@
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="3Ot-xM-VUe">
                                 <rect key="frame" x="14" y="118" width="347" height="31"/>
+                                <connections>
+                                    <action selector="heightChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="GHD-Lm-VcX"/>
+                                </connections>
                             </slider>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4YO-xw-DfN">
+                                <rect key="frame" x="61" y="269" width="253" height="317"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="317" id="CjV-W5-zc9"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="4YO-xw-DfN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="45" id="4bQ-wc-7hU"/>
                             <constraint firstItem="mr5-Er-VdV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="55D-NM-x0Q"/>
                             <constraint firstItem="3Ot-xM-VUe" firstAttribute="top" secondItem="3vX-kA-gEK" secondAttribute="bottom" constant="24" id="6e7-C9-rKd"/>
                             <constraint firstItem="1u6-pQ-Tw8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7oI-uD-u59"/>
                             <constraint firstItem="3Ot-xM-VUe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="Aiy-Y3-fPg"/>
                             <constraint firstItem="3vX-kA-gEK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BR0-a7-jfU"/>
+                            <constraint firstItem="4YO-xw-DfN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="C0i-FV-cUl"/>
                             <constraint firstItem="mr5-Er-VdV" firstAttribute="top" secondItem="3Ot-xM-VUe" secondAttribute="bottom" constant="34" id="D72-jH-oLo"/>
+                            <constraint firstItem="4YO-xw-DfN" firstAttribute="top" secondItem="mr5-Er-VdV" secondAttribute="top" constant="87" id="HuZ-JS-X1e"/>
                             <constraint firstItem="1u6-pQ-Tw8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="LGC-vK-24o"/>
                             <constraint firstItem="3vX-kA-gEK" firstAttribute="top" secondItem="1u6-pQ-Tw8" secondAttribute="bottom" constant="8" id="SMu-hH-Y8B"/>
                             <constraint firstAttribute="trailing" secondItem="3Ot-xM-VUe" secondAttribute="trailing" constant="16" id="gLd-GT-n3g"/>
                             <constraint firstAttribute="trailing" secondItem="mr5-Er-VdV" secondAttribute="trailing" constant="16" id="l0P-00-s5Q"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="customView" destination="4YO-xw-DfN" id="3Bp-Ki-ueb"/>
+                        <outlet property="heightConstraint" destination="CjV-W5-zc9" id="7wa-z2-vib"/>
+                        <outlet property="slider" destination="3Ot-xM-VUe" id="SxX-Iq-1ZI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130.5" y="297.5"/>
+            <point key="canvasLocation" x="208.80000000000001" y="267.61619190404798"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
-    </simulatedMetricsContainer>
 </document>
